# jorge_useful_scripts

./: .gitignore  LICENSE  README.md  hdf5.py  hessian.py  optim.xyz
analyze_frags/: analyze.py  fraganalysis.py
cmake_intel/: CMakeLists.txt
get_chem/: get_chem.py
get_connectivity/: get_connectivity.py
get_connectivity/json_reader_simple/: CMakeLists.txt
get_connectivity/json_reader_simple/include/: molecule.hpp
get_connectivity/json_reader_simple/source/: main.cpp  utilities.hpp
get_cutoffs_from_jsons/: calculate_cutoffs.py  get_cuttofs_general.py  get_deltaE.py  get_trimer_deltaE.py  multipole_2.py  remove_charged_contributions_nmers.py
get_data_from_pdx/: TS_structures.txt  clean.py  cleaned_data.txt  consolidated_script.py  data.txt  get_text.py  insert_separation.py  make_xyz_files.py  reactant_structures.txt  separate_structures.py  separate_sulphur_structures.py  separated_cleaned_data.txt
get_ordered_dimer/: distances.txt  get_dimers.py
get_xyz_from_quick/: 1_3-Difluorobenzene.in  1_3_5-Trifluorobenzene.in  1_3_5-Trisilacyclohexane.in  1_5-Difluoronaphthalene.in  2_Hydroxybicyclopentane.in  ACANIL01.in  ACHTAR10.in  Acetone.in  Acetylene.in  Allene.in  Ammonia.in  Benzaldehyde.in  Benzene.in  Benzidine.in  Caffeine.in  Difuropyrazine.in  Dimethylpentane.in  Disilyl-ether.in  Ethane.in  Ethanol.in  Furan.in  Histidine.in  Hydroxysulfane.in  Menthone.in  Mesityl-oxide.in  Methylamine.in  Naphthalene.in  Neopentane.in  Pterin.in  Water.in  get_xyz.py
hdf5_logs/: validation_inputs_geo_opt_qn_w1_hessian.hdf5
job_launcher/: README.md  launcher.py  (+2 more)
(+747 files in other folders)
